# SS22-Knowledge-Graph

./: .gitignore  README.md  Report.md  Untitled-1.ipynb  knowledge_graph_embeddings_training.ipynb  pyproject.toml  requirements.txt
1_data-acquisition/: poi_crawler.py
1_data-acquisition/_route/: convert_flexpolyline.py  example-response.json
1_data-acquisition/here-maps-traffic-crawler/: docker-compose.yml
1_data-acquisition/incident-data-crawler/: docker-compose.yml  package-lock.json  package.json
1_data-acquisition/weather-data-crawler/: Dockerfile  docker-compose.yml
2_data_processing/: main.py
2_data_processing/data_linking/: calc_nearby_roads.py  export_roads_list.py  poi_calc_nearby_roads.py  util.py
2_data_processing/data_transformation/: incident_transform.py  match_date_column.py  match_speed.py  poi_transform.py  traffic_transform.py  weather_transform.py
2_knowledge-graph/: data_integration.py  docker-compose.yml
2_knowledge-graph/embedding/: training.py
3_data_integration/: data_integration.py  main.py  schema.cypher
4_kge/: 4_kge.ipynb  extract_pykeen_triples.py  main.py  predict.py  print_results.py  pykeen_triples_extractor.py  training.py
4_kge/embedding/: training.py
5_application/kg_webapp_backend/: manage.py
5_application/kg_webapp_ui/: README.md  (+4 more)
6_learning_goals/: learning_goals.ipynb
documents/: append_nearby_roads.py  example-response.json  export_roads_list.py  flexpolyline.py  match_date_column.py  plot_roads.py  plot_traffic.py  round_values_column.py  traffic-data-transformator.py  weather-data-transformator.py
(+61 files in other folders)
